@@ -37,10 +37,10 @@ class JFormFieldColor extends JFormField
 	 */
 	protected function getInput()
 	{
-		// control value can be: hue (default), saturation, brightness, wheel or simpel
+		// Control value can be: hue (default), saturation, brightness, wheel or simpel
 		$control = (string) $this->element['control'];
 
-		// position of the panel can be: right (default), left, top or bottom
+		// Position of the panel can be: right (default), left, top or bottom
 		$position = $this->element['position'] ? (string) $this->element['position'] : 'right';
 		$position = ' data-position="' . $position . '"';
 
@@ -48,13 +48,18 @@ class JFormFieldColor extends JFormField
 		$class = (string) $this->element['class'];
 
 		$color = strtolower($this->value);
-		if (!$color || in_array($color, array('none', 'transparent'))) {
+
+		if (!$color || in_array($color, array('none', 'transparent')))
+		{
 			$color = 'none';
-		} else if ($color['0'] != '#') {
+		}
+		elseif ($color['0'] != '#')
+		{
 			$color = '#' . $color;
 		}
 
-		if ($control == 'simple') {
+		if ($control == 'simple')
+		{
 			$class = ' class="' . trim('simplecolors chzn-done ' . $class) . '"';
 			JHtml::_('behavior.simplecolorpicker');
 
@@ -74,35 +79,50 @@ class JFormFieldColor extends JFormField
 					'#555555',
 					'#000000'
 				);
-			} else {
+			}
+			else
+			{
 				$colors = explode(',', $colors);
 			}
 
 			$split = (int) $this->element['split'];
-			if (!$split) {
+
+			if (!$split)
+			{
 				$count = count($colors);
-				if ($count % 5 == 0) {
+				if ($count % 5 == 0)
+				{
 					$split = 5;
-				} else if ($count % 4 == 0) {
-					$split = 4;
+				}
+				else {
+					if ($count % 4 == 0)
+					{
+						$split = 4;
+					}
 				}
 			}
+
 			$split = $split ? $split : 3;
 
 			$html = array();
 			$html[] = '<select name="' . $this->name . '" id="' . $this->id . '"'
 				. $class. $position . $onchange . ' style="visibility:hidden;width:22px;height:1px">';
 
-			foreach ($colors as $i => $c) {
+			foreach ($colors as $i => $c)
+			{
 				$html[] = '<option' . ($c == $color ? ' selected="selected"' : '') . '>' . $c . '</option>';
-				if (($i + 1) % $split == 0) {
+
+				if (($i + 1) % $split == 0)
+				{
 					$html[] = '<option>-</option>';
 				}
 			}
 			$html[] = '</select>';
 
 			return implode('', $html);
-		} else {
+		}
+		else
+		{
 			$class = ' class="' . trim('minicolors ' . $class) . '"';
 			$control = $control ? ' data-control="' . $control . '"' : '';
 			$disabled = ((string) $this->element['disabled'] == 'true') ? ' disabled="disabled"' : '';
