@@ -30,6 +30,7 @@ $ -> Language fix or change
  # [#30317] Synch session check bug fix from platform.  Thanks Elin
  # [#30419] using foreach with nonarray in com_finder's feed view.  Thanks Elijah
  ^ [#30426] Sync HTML package to the Platform
+ ^ [#30297] Changed MooTools to jQuery based color picker.  Thanks Peter
 
 29-Mar-2013 Mark Dexter
  # [#30205] findmanifest should prioritize main folder manifests. Thanks Roberto.
